--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,10 +175,13 @@ p {
 }
 */
 
-.search-engine-optimization img {
+/*Consolidated Content max-height*/
+.search-engine-optimization img,
+.online-reputation-management img,
+.social-media-marketing img {
     max-height: 200px;
 }
-
+/*
 .online-reputation-management img {
     max-height: 200px;
 }
@@ -186,12 +189,16 @@ p {
 .social-media-marketing img {
     max-height: 200px;
 }
+*/
 
-.search-engine-optimization h2 {
+/*Consolidated Content h2*/
+.search-engine-optimization h2,
+.online-reputation-management h2, 
+.social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+/*
 .online-reputation-management h2 {
     margin-bottom: 20px;
     font-size: 36px;
@@ -201,7 +208,7 @@ p {
     margin-bottom: 20px;
     font-size: 36px;
 }
-
+*/
 .footer {
     padding: 30px;
     clear: both;
