--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,11 +86,12 @@ aside {
     background-color: #2589bd;
 }
 /*consolidate .benefit margin-bottom and color*/
-.benefit-lead ,
+/* .benefit-lead ,
 .benefit-cost,
-.benefit-lead {
+.benefit-lead  */
+article {
     margin-bottom: 32px;
-    color: #ffffff;
+    color: #ffffff
 }
 /*
 .benefit-brand {
@@ -104,9 +105,10 @@ aside {
 }
 */
 /*Consolidate .benefit h3 margin-bottom and text-align*/
-.benefit-lead h3,
+/* .benefit-lead h3,
 .benefit-brand h3,
-.benefit-cost h3 {
+.benefit-cost h3*/ 
+article h3 { 
     margin-bottom: 10px;
     text-align: center;
 }
@@ -123,9 +125,10 @@ aside {
 */
 
 /*Consolidate .benefit img for display, margin and max-width.*/
-.benefit-lead img,
+/* .benefit-lead img,
 .benefit-brand img,
-.benefit-cost img {
+.benefit-cost img*/
+article img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
@@ -212,13 +215,13 @@ section h2 {
     font-size: 36px;
 }
 */
-.footer {
+footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
 }
 
-.footer h2 {
+footer h2 {
     font-size: 20px;
 }
