--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     background-color: #d9dcd6;
 }
 
+/* Changed to header */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -50,6 +51,7 @@ p {
     font-size: 16px;
 }
 
+/* Changed to figure */
 figure {
     height: 800px;
     width: 100%;
@@ -69,12 +71,14 @@ figure {
     margin-left: 25px;
 }
 
+/* Changed to main semantic */
 main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
+/* Changed to aside from div tag */
 aside {
     margin-right: 20px;
     padding: 20px;
@@ -85,72 +89,26 @@ aside {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
-/*consolidate .benefit margin-bottom and color*/
-/* .benefit-lead ,
-.benefit-cost,
-.benefit-lead  */
+
+/*Consolidate .benefit margin-bottom and color to article*/
 article {
     margin-bottom: 32px;
     color: #ffffff
 }
-/*
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
 
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-*/
-/*Consolidate .benefit h3 margin-bottom and text-align*/
-/* .benefit-lead h3,
-.benefit-brand h3,
-.benefit-cost h3*/ 
 article h3 { 
     margin-bottom: 10px;
     text-align: center;
 }
-/*
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-*/
 
 /*Consolidate .benefit img for display, margin and max-width.*/
-/* .benefit-lead img,
-.benefit-brand img,
-.benefit-cost img*/
 article img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-/*
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
 
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-*/
-
-/*Consolidating 
-.search-engine-optimization,
-.online-reputation-management,
-.social-media-marketing */
+/*Consolidated classes to section*/
 section {
     margin-bottom: 20px;
     padding: 50px;
@@ -159,62 +117,18 @@ section {
     background-color: #0072bb;
     color: #ffffff;
 }
-/*
-.online-reputation-management {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
 
-.social-media-marketing {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-*/
-
-/*Consolidated Content max-height
-.search-engine-optimization img,
-.online-reputation-management img,
-.social-media-marketing img*/
+/*Consolidated Content to section max-height*/
 section img {
     max-height: 200px;
 }
-/*
-.online-reputation-management img {
-    max-height: 200px;
-}
 
-.social-media-marketing img {
-    max-height: 200px;
-}
-*/
-
-/*Consolidated Content h2
-.search-engine-optimization h2,
-.online-reputation-management h2, 
-.social-media-marketing h2 */
+/*Consolidated Content h2*/
 section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
-/*
-.online-reputation-management h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-
-.social-media-marketing h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
-}
-*/
+/* Compressed and changed classes to footer*/
 footer {
     padding: 30px;
     clear: both;
